# MLOps_HSE

./: .gitignore  README.md  main.py  pyproject.toml
api_modules/: api_commands.py  model.py
