[tool.poetry]
name = "hw1-ml-api"
version = "0.1.0"
description = ""
authors = ["Vasiliy Glamazdin <glamazdin99@gmail.com>"]
readme = "README.md"
packages = [{include = "hw1_ml_api"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
flake8 = "^5.0.4"
sklearn = "^0.0"
catboost = "^1.1"
joblib = "^1.2.0"
flask-restx = "^0.5.1"
flask = "2.1.0"
werkzeug = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
